--- a/src/components/shopify/templates/productSingle/productSingle.module.scss
+++ b/src/components/shopify/templates/productSingle/productSingle.module.scss
@@ -30,10 +30,19 @@
       border: 2px solid black;
       color: black;
       text-decoration: none;
-      width: 100%;
+      display: block;
+      text-align: center;
+      color: white;
+      background: black;
     }
     .variantWrapper{
       margin-bottom: 2rem;
+      select{
+        border: 2px solid black;
+        font-size: 1.2rem;
+        padding: 0.5rem;
+        width: 100%;
+      }
     }
   }
 
