--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,14 +16,20 @@ body {
 .center-text {
   text-align: center;
 }
-.header-logo {
-  width: 75px;
-  height: 75px;
+.store-header{
+  display: flex;
+  justify-content: space-between;
+  .header-logo {
+    max-width: 75px;
+    max-height: 75px;
 
-  .gatsby-image-wrapper {
-    min-height: 75px;
+    .gatsby-image-wrapper {
+      height: 75px;
+      width: 75px;
+    }
   }
 }
+
 
 .main-footer {
   background-color: #AB8D3F;
