Fixed logo component to select logotype based on variable. Added new logos. Removed unnecessary imports in tagSingle

--- a/src/components/callouts/homeHeader.module.scss
+++ b/src/components/callouts/homeHeader.module.scss
@@ -16,7 +16,7 @@
 
       .logoImg {
         width: 320px;
-        height: 320px;
+        margin-bottom: 1rem;
 
         .gatsby-image-wrapper {
           min-width: 320px;
