--- a/src/components/shopify/productGrid/shopify-product-grid.module.scss
+++ b/src/components/shopify/productGrid/shopify-product-grid.module.scss
@@ -15,3 +15,40 @@
 
   }
 }
+.productNavigation{
+display: flex;
+  justify-content: center;
+  a{
+    border: 2px solid #000;
+    margin: 0.3rem;
+    padding: 0.5rem;
+    text-decoration: none;
+    color: black;
+    transition: background-color 0.5s ease-in-out;
+  }
+  :hover{
+    background: #000;
+    color: #fff;
+  }
+}
+.gridOptions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  @media (min-width: 768px) {
+    justify-content: flex-end;
+    margin-right: 1rem;
+  }
+  form{
+    margin-bottom: 0px;
+    select{
+      border: 2px solid black;
+      font-size: 1.2rem;
+      padding: 0.5rem;
+      width: 100%;
+    }
+  }
+
+}
