--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,33 @@
   font-family: "Rich Ganbatte";
   src: url('../fonts/rich-ganbatte.woff');
 }
+@font-face{
+  font-family: "Bellagio";
+  src: url("../fonts/bellagio-webfont.woff2")
+
+}
+.bellagio{
+  font-family: "Bellagio";
+}
+
+h1{
+  font-size: 2.6rem;
+}
+h2{
+  font-size: 2.3rem;
+}
+h3{
+  font-size: 2.0rem;
+}
+h4{
+  font-size: 1.7rem;
+}
+h5{
+  font-size: 1.4rem;
+}
+h6{
+  font-size: 1.1rem;
+}
 .rich-ganbatte{
   font-family: "Rich Ganbatte", serif;
   font-weight: 400;
@@ -19,13 +46,12 @@ body {
 .store-header{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   .header-logo {
-    max-width: 75px;
-    max-height: 75px;
+    max-width: 114px;
 
     .gatsby-image-wrapper {
-      height: 75px;
-      width: 75px;
+      width: 114px;
       picture{
         img{
           // This is probably going to cause problems.
@@ -94,4 +120,5 @@ body {
 }
 
 //END ONE TREE PLANTED CALLOUT
+
 
