--- a/src/components/shopify/productCard/shopify-product-card.module.scss
+++ b/src/components/shopify/productCard/shopify-product-card.module.scss
@@ -14,6 +14,9 @@
     }
     @media (min-width: 1200px) {
       min-height: 16.6vw;
+      h6{
+        font-size: 1rem;
+      }
     }
     * {
       display: none;
