--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,6 +41,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #ececec;
   .header-logo {
     max-width: 114px;
 
