--- a/src/components/shopify/cart/cart.module.scss
+++ b/src/components/shopify/cart/cart.module.scss
@@ -1,16 +1,22 @@
 .cartWrap{
-  display: flex;
+
+  .cartIcon{
+    max-width: 41px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .cartCounts{
-    padding-left: 1rem;
+    display: block;
+    clear: both;
     text-decoration: underline;
   }
 }
 .quantityIcon{
   border-radius: 50%;
   background: red;
+  padding: 0.10rem;
   color: white;
-  padding-top: 0.7rem;
-  padding-left: 0.25rem;
   width: 1.3rem;
   height: 1.3rem;
   margin-top: 0.6rem;
