--- a/src/components/shopify/cartContents/shopify-cart-contents.module.scss
+++ b/src/components/shopify/cartContents/shopify-cart-contents.module.scss
@@ -1,10 +1,19 @@
-.cartItem{
-  border-bottom: 2px solid black;
-  display: flex;
-  flex-direction: column;
-  .titleWrap{
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
+.itemGrid{
+  margin: 1rem;
+  .cartHeading{
+    display: grid;
+    font-weight: bold;
+    grid-template-columns: 1fr auto;
+    border-bottom: 1px solid #222;
+    margin-bottom: 1rem;
+    .cartQuantityHeader, .cartTotalHeader{
+      display: none;
+    }
+  }
+}
+.cartGreeting{
+  text-align: center;
+  h1{
+    margin-bottom: 0.1rem;
   }
 }
