--- a/src/components/shopify/collectionGrid/shopify-collection-grid.module.scss
+++ b/src/components/shopify/collectionGrid/shopify-collection-grid.module.scss
@@ -6,5 +6,11 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
+  @media (min-width: 1200px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    overflow: hidden;
+
+  }
 
 }
