changed header heirarchy to adhere to SEO best practices (lighthouse)

--- a/src/components/shopify/productCard/shopify-product-card.module.scss
+++ b/src/components/shopify/productCard/shopify-product-card.module.scss
@@ -6,6 +6,9 @@
     width: 100%;
     color: #fff;
     min-height: 50vw;
+    h2{
+      font-size: 1.1rem;
+    }
     @media (min-width: 768px) {
       min-height: 33vw;
     }
@@ -14,7 +17,7 @@
     }
     @media (min-width: 1200px) {
       min-height: 16.6vw;
-      h6{
+      h2{
         font-size: 0.9rem;
       }
     }
