--- a/src/components/shopify/collectionCard/shopify-collection-card.module.scss
+++ b/src/components/shopify/collectionCard/shopify-collection-card.module.scss
@@ -21,6 +21,7 @@
     background-color: rgba(0,0,0, 0.2);
     .collectionCardTitle{
       text-transform: uppercase;
+      font-size: 1.4rem;
     }
     .collectionCardViewButton {
       border-radius: 2px;
