Further image refinements for callout background images to increase performance

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,8 +74,8 @@ body {
 
 //ONE TREE PLANTED CALLOUT
 .tree-callout{
-  background: url("../images/milky-way.jpg");
-  background-size: cover;
+  //background: url("../images/milky-way.jpg");
+  //background-size: cover;
 }
 .inner-tree-callout {
   display: flex;
