Added flat background color to OTP callout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,6 +76,7 @@ body {
 .tree-callout{
   //background: url("../images/milky-way.jpg");
   //background-size: cover;
+  background-color: #222222;
 }
 .inner-tree-callout {
   display: flex;
