Refined collection grid, changed homepage content layout

--- a/src/components/shopify/collectionCard/shopify-collection-card.module.scss
+++ b/src/components/shopify/collectionCard/shopify-collection-card.module.scss
@@ -11,6 +11,7 @@
     width: 100%;
     color: #fff;
     min-height: 33vw;
+    text-align: center;
     @media (min-width: 1200px) {
     min-height: 25vw;
   }
