--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,4 +119,9 @@ body {
   color: black;
   text-decoration: none;
 }
-
+.productsContent {
+  display: grid;
+  grid-gap: 1rem;
+  margin: 1rem;
+  grid-template-columns: 1fr 3fr;
+}
