--- a/src/components/shopify/filters/shopify-filters.module.scss
+++ b/src/components/shopify/filters/shopify-filters.module.scss
@@ -1,4 +1,27 @@
 .filterBox{
-  padding: 1rem;
-  border: 1px solid #bbb;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+
+}
+
+.categoryList{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 1rem;
+  @media (min-width: 512px) {
+    grid-template-columns: 1fr 1fr 1fr;
+
+  }
+  @media (min-width: 992px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  }
+  @media (min-width: 1200px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+  }
 }
