--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -120,8 +120,19 @@ body {
   text-decoration: none;
 }
 .productsContent {
-  display: grid;
-  grid-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+//ALL PRODUCTS STYLES
+
+
+.productsHeader{
+  display: flex;
   margin: 1rem;
-  grid-template-columns: 1fr 3fr;
+  justify-content: space-between;
+  align-items: center;
+  h3{
+    margin-bottom: 0px;
+  }
 }
