Completed handoff for shopify checkout process

--- a/src/components/shopify/cartContents/shopify-cart-contents.module.scss
+++ b/src/components/shopify/cartContents/shopify-cart-contents.module.scss
@@ -53,3 +53,11 @@
   }
 
 }
+
+.cartFooter{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  >div:last-child{
+    text-align: right;
+  }
+}
